...
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linerLayoutID"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="uk.co.ecorunners.ecorunners.activity.ListCalendarActivity">

    <ImageView
...
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="TextView" />


    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:divider="@drawable/list_divider"
        android:dividerHeight="50px"
        android:headerDividersEnabled="false">

...

    <RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/previousWeekBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/btn_previous_background"
            android:layout_alignParentLeft="true"
            android:text="previous week" />

        <Button
            android:id="@+id/nextWeekBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/btn_previous_background"
            android:text="Next Week" />

    </RelativeLayout>

    <Button
        android:id="@+id/homeBtn"
        android:layout_width="wrap_content"
...
