...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.co.ecorunners.ecorunners.activity.AddDeliveriesActivity">

    <Button
        android:id="@+id/nextShiftBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/btn_next_shift"
        android:text="Next Shift"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:background="@drawable/btn_submit_background"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
...
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingTop="3dp"
        app:srcCompat="@drawable/ecorunnerslogo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoView"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
...
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

        <EditText
            android:id="@+id/deliveryNum"
            android:layout_width="60dp"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/deliveryborder"
...
