<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeViewID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.co.ecorunners.ecorunners.activity.MainActivity">

    <ImageView
        android:id="@+id/logoView"
...
        android:layout_toRightOf="@+id/logoView"
        android:text="Welcome"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="143dp" />

    <Button
        android:id="@+id/rotaCalendarBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="@drawable/btn_home_background"
        android:text="Rota Calendar" />

    <Button
        android:id="@+id/guidesBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rotaCalendarBtn"
        android:layout_alignStart="@+id/rotaCalendarBtn"
        android:layout_below="@+id/rotaCalendarBtn"
        android:layout_marginTop="43dp"
        android:background="@drawable/btn_home_background"
        android:text="Guides" />

    <Button
        android:id="@+id/managementRotaBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/guidesBtn"
...
